<resources>
    <string name="app_name">Movie_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appTitle">Movie App</string>
    <string name="signUp">Sign Up</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="signUpButton">SIGN UP</string>
    <string name="dontYouHaveAccount">Don\'t you have an account?</string>
    <string name="forgetPassword">Did you forget your password?</string>
    <string name="registeredAlready">Already registered?</string>
    <string name="Popular">Popular</string>
    <string name="addToFavorite">Add to Favorites</string>
    <string name="navMovies">Movies</string>
    <string name="navFavorite">My Favorites</string>
    <string name="FavoriteTitle">My Favorites</string>
    <string name="SignOut">SIGN OUT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>