<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subjectColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.LoginFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textSize="@dimen/textSizeXLarge"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/MarginMediumPlus"
        android:layout_marginTop="@dimen/loginTitleMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/MarginSmall"
        android:layout_marginTop="@dimen/MarginMediumPlus"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/MarginMediumPlus"
        android:layout_marginRight="@dimen/MarginMediumPlus"
        android:hint="@string/hintEmail"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_mail"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/MarginSmall"
        android:layout_marginTop="@dimen/MarginMediumPlus"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/MarginMediumPlus"
        android:layout_marginRight="@dimen/MarginMediumPlus"
        android:hint="@string/hintPassword"/>

    <EditText
        android:id="@+id/et_secondPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/MarginSmall"
        android:layout_marginTop="@dimen/MarginMediumPlus"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/MarginMediumPlus"
        android:layout_marginRight="@dimen/MarginMediumPlus"
        android:hint="@string/hintPassword"/>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_secondPassword"
        android:text="@string/signUpButton"
        android:layout_marginLeft="@dimen/MarginMediumPlus"
        android:layout_marginRight="@dimen/MarginMediumPlus"
        android:layout_marginTop="@dimen/MarginMedium">
    </Button>

    <TextView
        android:id="@+id/tv_alreadyRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signUp"
        android:text="@string/registeredAlready"
        android:textSize="@dimen/textSizeLarge"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/MarginMediumPlus"
        android:layout_marginRight="@dimen/MarginMediumPlus"
        android:layout_marginTop="@dimen/MarginMedium">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>